second 3 contrast fixed

--- a/Home _ Doctor-4-U_files/global.css
+++ b/Home _ Doctor-4-U_files/global.css
@@ -20,4 +20,10 @@
 						font-family: "Roboto", Sans-serif;
 						font-weight: 400;
 					}
+
+					.elementor-widget-text-editor {
+						color: #000000 !important;
+						font-family: "Roboto", Sans-serif;
+						font-weight: 400;
+					}
 					
